<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OneKey Cleaner</string>
    <string name="app_cache">App Cache</string>
    <string name="privacy">Privacy</string>
    <string name="junk_files">Junk Files</string>
    <string name="task_manager">Task Manager</string>
    <string name="running_tasks">Running Tasks</string>
    <string name="optimize">Optimize</string>
    <string name="optimize_with">Optimize (%1$d)</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="privacy_protector">Privacy Prote</string>
    <string name="more_and_faq">More &amp; FAQ</string>
    <string name="tutorial">Tutorial</string>
    <string name="apk_installer">App Manager</string>
    <string name="not_installed">Not Installed</string>
    <string name="installed">Installed</string>
    <string name="unknown">Unknown</string>
    <string name="loading">Loading</string>
    <string name="ignore_list">Ignore List</string>
    <string name="tap_to_clean">Tap to clean</string>
    <string name="statistics_with">Today cleaned: %1$s, Total: %2$s</string>
    <string name="state_health">Health</string>
    <string name="state_scanning">Scanning</string>
    <string name="state_great">Great</string>
    <string name="state_bad">Bad</string>
    <string name="computing">Computing..</string>
    <string name="empty">Empty</string>
    <string name="format_memory">%1$s / %2$s</string>
    <string name="format_used">%1$d%%</string>
    <string name="test_value">99</string>
    <string name="test_value_plus">999.9KB</string>
    <string name="history_records">History records</string>
    <string name="chat_records">Chat records</string>
    <string name="manual_cleaning">Manual cleaning</string>
    <string name="downloaded">Downloaded</string>
    <string name="residual_files">Residual Files</string>
    <string name="empty_directories">Empty Directories</string>
    <string name="app_logs">App Logs</string>
    <string name="item_end_task">End Task</string>
    <string name="item_switch_to">Switch To</string>
    <string name="item_add_to_ignorelist">Add to Ignore List</string>
    <string name="item_detail">Detail</string>
    <string name="item_create_widget">Create widget</string>
    <string name="item_settings">Settings</string>
    <string name="item_rate_this_app">Rate this app</string>
    <string name="item_more_apps">More apps</string>
    <string name="none">N/A</string>
    <string name="clean_selected">Clean Selected</string>
    <string name="clean_all">Clean All</string>
    <string name="clipboard">Clipboard</string>
    <string name="clipboard_info">Copied/cut contents</string>
    <string name="sms">SMS</string>
    <string name="sms_info">Sent and received messages</string>
    <string name="calllog">Call Logs</string>
    <string name="calllog_info">Calls with others</string>
    <string name="browser_search">Browser search</string>
    <string name="browser_search_info">Search logs</string>
    <string name="browser_history">Browsing history</string>
    <string name="browser_history_info">Visited websites</string>
    <string name="google_play">Google Play</string>
    <string name="google_play_info">Search history</string>
    <string name="youtube">YouTube</string>
    <string name="youtube_info">Search history</string>
    <string name="google_maps">Google Maps</string>
    <string name="google_maps_info">Search history</string>
    <string name="google_search">Google Search</string>
    <string name="google_search_info">Search history</string>
    <string name="gmail">Gmail</string>
    <string name="gmail_info">Account, password, local mails</string>
    <string name="google_plus">Google+</string>
    <string name="google_plus_info">Account, password, messages</string>
    <string name="chrome">Chrome</string>
    <string name="chrome_info">Account, password, history</string>
    <string name="basics">BASICS</string>
    <string name="advanced">ADVANCED</string>
    <string name="misc">MISC</string>
    <string name="about">ABOUT</string>
    <string name="task_manager_ignore_list">Task Manager Ignore List</string>
    <string name="junk_reminder">Junk Reminder</string>
    <string name="faqs">FAQs</string>
    <string name="version">Version</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="clean">Clean</string>
    <string name="done">Done</string>
    <string name="item_expand_all">Expand All</string>
    <string name="item_collapse_all">Collapse All</string>
    <string name="item_faq">FAQ</string>
    <string name="history_today">Today</string>
    <string name="history_yesterday">Yesterday</string>
    <string name="history_earlier">Earlier</string>
    <string name="reporting">Reporting</string>
    <string name="cleaning">Cleaning</string>
    <string name="optimizing">Optimizing</string>
    <string name="manual">Manual</string>
    <string name="reporting_running_processes">Running processes</string>
    <string name="reporting_app_cache">App cache</string>
    <string name="reporting_privacy_data">Privacy data</string>
    <string name="back">Back</string>
    <string name="youtube_tips">Search => Clear search history</string>
    <string name="app_info_tips">Please tap \"Clear data\" manually to clean your private data.</string>
    <string name="disable_tips">"Don't remind me again"</string>
    <string name="broken_app">Broken (%1$s)</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="more">More</string>
    <string name="connection_timeout">Unable to connect.</string>
    <string name="connection_timeout_extra">Please review your network settings</string>
</resources>
