<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/expand_all" android:background="@drawable/menu_top_bg" android:text="@string/item_expand_all" android:drawableLeft="@drawable/open" style="@style/popup_menu_item" />
    <View style="@style/popup_menu_split" />
    <Button android:id="@id/collapse_all" android:background="@drawable/menu_item_bg" android:text="@string/item_collapse_all" android:drawableLeft="@drawable/exit" style="@style/popup_menu_item" />
    <View style="@style/popup_menu_split" />
    <Button android:id="@id/faq" android:background="@drawable/menu_bottom_bg" android:text="@string/item_faq" android:drawableLeft="@drawable/detail" style="@style/popup_menu_item" />
</LinearLayout>