<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/header" layout="@layout/process_header" />
    <RelativeLayout android:id="@id/statusbar" android:background="@color/gray" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/header">
        <TextView android:textColor="@android:color/white" android:id="@id/lab_running_tasks" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/running_tasks" android:layout_alignParentLeft="true" />
        <TextView android:textStyle="bold" android:textColor="@color/green_light" android:id="@id/running_tasks" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:text="@string/unknown" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:id="@id/footer" android:background="@color/gray_light" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentBottom="true">
        <Button android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/ignore_list" android:background="@drawable/btn_blue" android:layout_width="0.0dip" android:layout_height="36.0dip" android:layout_marginLeft="6.0dip" android:text="@string/ignore_list" android:layout_weight="1.4" />
        <Button android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/optimize" android:background="@drawable/btn_green" android:layout_width="0.0dip" android:layout_height="36.0dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:text="@string/optimize" android:layout_weight="2.0" />
    </LinearLayout>
    <View android:id="@id/divider" android:background="@drawable/divider" android:layout_width="fill_parent" android:layout_height="0.6dip" android:layout_above="@id/footer" />
    <ListView android:id="@id/process" android:background="@color/gray_light" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent" android:divider="@null" android:layout_above="@id/divider" android:layout_below="@id/statusbar" style="@style/list_plus" />
</RelativeLayout>