<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@android:color/white" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="82.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:id="@id/privacy_protector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" style="@style/sub_button">
        <ImageView android:id="@id/privacy_protector_icon" android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@drawable/shield" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@null" />
        <TextView android:textSize="16.0sp" android:textColor="@color/gray_dark" android:id="@id/privacy_protector_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/privacy_protector" android:layout_toRightOf="@id/privacy_protector_icon" android:layout_alignParentTop="true" />
        <TextView android:textSize="14.0sp" android:id="@id/privacy_protector_state" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/privacy_protector_label" android:layout_alignLeft="@id/privacy_protector_label" />
    </RelativeLayout>
    <View android:background="@drawable/divider" android:layout_width="0.6dip" android:layout_height="fill_parent" />
    <RelativeLayout android:gravity="center" android:id="@id/faq" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" style="@style/sub_button">
        <ImageView android:id="@id/faq_icon" android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@drawable/faq" android:layout_centerVertical="true" android:contentDescription="@null" />
        <TextView android:textSize="16.0sp" android:textColor="@color/gray_dark" android:id="@id/faq_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/more_and_faq" android:layout_toRightOf="@id/faq_icon" android:layout_alignParentTop="true" />
        <TextView android:textSize="14.0sp" android:textColor="@color/orange" android:id="@id/faq_state" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tutorial" android:layout_below="@id/faq_label" android:layout_alignLeft="@id/faq_label" />
    </RelativeLayout>
</LinearLayout>