<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/main" android:background="@android:color/white" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:id="@id/taskmanager" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/common_button">
        <ImageView android:id="@id/taskmanager_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/taskmanager" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@null" />
        <TextView android:textSize="10.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/taskmanager_num" android:background="@drawable/num" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="0.0dip" android:includeFontPadding="false" android:layout_alignTop="@id/taskmanager_icon" android:layout_alignRight="@id/taskmanager_icon" />
        <TextView android:textSize="15.0sp" android:textColor="@color/gray_dark" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/task_manager" android:layout_below="@id/taskmanager_icon" />
    </RelativeLayout>
    <View android:background="@drawable/divider" android:layout_width="0.6dip" android:layout_height="fill_parent" />
    <RelativeLayout android:id="@id/privacy" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/common_button">
        <ImageView android:id="@id/privacy_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/privacy" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@null" />
        <TextView android:textSize="10.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/privacy_num" android:background="@drawable/num" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="0.0dip" android:includeFontPadding="false" android:layout_alignTop="@id/privacy_icon" android:layout_alignRight="@id/privacy_icon" />
        <TextView android:textSize="15.0sp" android:textColor="@color/gray_dark" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/privacy" android:layout_below="@id/privacy_icon" />
    </RelativeLayout>
    <View android:background="@drawable/divider" android:layout_width="0.6dip" android:layout_height="fill_parent" />
    <RelativeLayout android:id="@id/junkfiles" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/common_button">
        <ImageView android:id="@id/junkfiles_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/junkfiles" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@null" />
        <TextView android:textSize="10.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/junkfiles_num" android:background="@drawable/num" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="0.0dip" android:includeFontPadding="false" android:layout_alignTop="@id/junkfiles_icon" android:layout_alignRight="@id/junkfiles_icon" />
        <TextView android:textSize="15.0sp" android:textColor="@color/gray_dark" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/junk_files" android:layout_below="@id/junkfiles_icon" />
    </RelativeLayout>
</LinearLayout>